<resources>
    <string name="app_name">DrumPad</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button10">10</string>
    <string name="button11">11</string>
    <string name="button12">12</string>
    <string name="button13">13</string>
    <string name="button14">14</string>
    <string name="button15">15</string>
</resources>
